PreferenceUtils、新手引导界面、小圆点的实现

--- a/app/src/main/res/layout/activity_gide.xml
+++ b/app/src/main/res/layout/activity_gide.xml
@@ -9,17 +9,25 @@
         android:layout_height="match_parent"></android.support.v4.view.ViewPager>
 
     <Button
+        android:id="@+id/btn_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="114dp"
-        android:text="开始体验" />
+        android:layout_marginBottom="70dp"
+        android:text="开始体验"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:textColor="@color/txt_color_selector"
+        android:background="@drawable/btn_guide_selector"
+        android:visibility="gone" />
+
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp">
 
         <LinearLayout
@@ -32,7 +40,8 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/iv_red_point"/>
+            android:id="@+id/iv_red_point"
+            android:src="@drawable/shape_red"/>
 
     </RelativeLayout>
 </RelativeLayout>
